--- a/vezba.html
+++ b/vezba.html
@@ -5,7 +5,7 @@
 <h2>HTML Forms</h2>
 
 <form action="/action_page.php">
-  First name:<br>
+  Ime:<br>
   <input type="text" name="firstname" value="Mickey">
   <br>
   Last name:<br>
